# task-cost-estimator

./: .env.example  .gitignore  Example estimation table.rtf  QA.rtf  README.md  create_wiki_page.txt  create_with_body.txt  example_wiki_page_est_table.txt  get_task_definition.txt  get_wiki_hierarchy.txt  get_wiki_page.txt  link_parent_child.txt  pyproject.toml  update_wiki_page.txt
runs/603820e1-a263-4a62-9f80-8d4f34cbdc8d/: created_wiki.json  failure_reason.txt  parent_link.json  plan.md
skills/task-cost-estimation/: SKILL.md
src/: __init__.py  config.py  main.py  run_artifacts.py
src/agent/: __init__.py  graph.py  prompts.py  tools.py
src/wiki/: __init__.py  adf.py  adf_schema_patch.py  client.py  prose.py  task_unit.py
